kubernetes/php-nginx-2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpapp
  labels:
    app: production
    type: app
    service: phpservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production
      type: app
      service: phpservice
  template:
    metadata:
      labels:
        app: production
        type: app
        service: phpservice
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
        - name: nginxconf
          configMap:
            name: nginx-config
      containers:
        - image: rade9094/myphp
          imagePullPolicy: IfNotPresent
          name: app
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
        - image: nginx
          imagePullPolicy: Always
          name: nginx
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - mountPath: /etc/nginx/conf.d
              name: nginxconf
