kubernetes/php-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-nginx-demo
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
        - name: nginxconf
          configMap:
            name: nginx-config
      containers:
        - image: rade9094/myphp
          imagePullPolicy: IfNotPresent
          name: php
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
        - image: nginx
<<<<<<< HEAD
          imagePullPolicy: IfNotPresent
=======
          imagePullPolicy: Always
>>>>>>> 2e54b350b209d8fc923da96bcf4ba25aef77e415
          name: nginx
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - mountPath: /etc/nginx/conf.d
              name: nginxconf
<<<<<<< HEAD
          livenessProbe:
            httpGet:
              path: /index.php 
              port: 80
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 5
            periodSeconds: 5
=======
>>>>>>> 2e54b350b209d8fc923da96bcf4ba25aef77e415
