kubernetes/ingress-resource-php.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
spec:
  rules:
  - host: ec2-34-239-117-146.compute-1.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: php-nginx-demo 
          servicePort: 80
